# python-ci

./: .coverage  .pre-commit-config.yaml  coverage.xml  pyproject.toml
.github/workflows/: code-quality.yaml
.github/workflows/actions/setup/: action.yaml
src/python_ci/: __init__.py
tests/python_ci/: test_init.py
