[project]
name = "python-ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rkohler", email = "roger.kohlerjr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
python-ci = "python_ci:main"

[build-system]
requires = ["uv_build>=0.6.6,<0.7"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
